# portproxy

./: .gitignore  CMakeLists.txt  readme.md  version.h
.github/workflows/: build.yml
src/: main.c  portproxy.c  portproxy.h  resource.rc  version.h
